terraform/rackspace-spot/k8s/relay-service-and-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: relay-svc
  labels:
    app: relay
spec:
  selector:
    app: relay
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: relay-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  rules:
    - host: node1.relaynet.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: relay-svc
                port:
                  number: 80
  tls:
    - hosts:
        - node1.relaynet.online
      secretName: node1-relaynet-tls
